--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <div class="six">
-      <img src="./img/Kimberly.jpeg" alt="profile" class="profile-picture" id="imagePath" />
+      <img src="./img/Kimberly_2.jpeg" alt="profile" class="profile-picture" id="imagePath" />
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Feliz cumpleaños!</h3>
